# docs/swagger.yaml
@@ -100,7 +100,7 @@ definitions:
     - name
     - password
     type: object
-  dtos.StructuredResponse:
+  dtos.ApiResponse:
     description: Standard response format containing success status, HTTP status code,
       message, and optional payload
     properties:
@@ -194,15 +194,15 @@ paths:
         "200":
           description: User logged in successfully
           schema:
-            $ref: '#/definitions/dtos.StructuredResponse'
+            $ref: '#/definitions/dtos.ApiResponse'
         "401":
           description: Invalid credentials
           schema:
-            $ref: '#/definitions/dtos.StructuredResponse'
+            $ref: '#/definitions/dtos.ApiResponse'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/dtos.StructuredResponse'
+            $ref: '#/definitions/dtos.ApiResponse'
       summary: Login a user
       tags:
       - auth
@@ -224,11 +224,11 @@ paths:
         "201":
           description: User registered successfully
           schema:
-            $ref: '#/definitions/dtos.StructuredResponse'
+            $ref: '#/definitions/dtos.ApiResponse'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/dtos.StructuredResponse'
+            $ref: '#/definitions/dtos.ApiResponse'
       summary: Register a new user
       tags:
       - auth
@@ -250,15 +250,15 @@ paths:
         "200":
           description: Todo item created successfully
           schema:
-            $ref: '#/definitions/dtos.StructuredResponse'
+            $ref: '#/definitions/dtos.ApiResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/dtos.StructuredResponse'
+            $ref: '#/definitions/dtos.ApiResponse'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/dtos.StructuredResponse'
+            $ref: '#/definitions/dtos.ApiResponse'
       security:
       - BearerAuth: []
       summary: Create a new Todo Item
@@ -282,15 +282,15 @@ paths:
         "200":
           description: Todo note created successfully
           schema:
-            $ref: '#/definitions/dtos.StructuredResponse'
+            $ref: '#/definitions/dtos.ApiResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/dtos.StructuredResponse'
+            $ref: '#/definitions/dtos.ApiResponse'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/dtos.StructuredResponse'
+            $ref: '#/definitions/dtos.ApiResponse'
       security:
       - BearerAuth: []
       summary: Create a new Todo Note
@@ -314,15 +314,15 @@ paths:
         "200":
           description: Todo item deleted successfully
           schema:
-            $ref: '#/definitions/dtos.StructuredResponse'
+            $ref: '#/definitions/dtos.ApiResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/dtos.StructuredResponse'
+            $ref: '#/definitions/dtos.ApiResponse'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/dtos.StructuredResponse'
+            $ref: '#/definitions/dtos.ApiResponse'
       security:
       - BearerAuth: []
       summary: Delete an existing Todo Item
@@ -339,15 +339,15 @@ paths:
         "200":
           description: Todo items retrieved successfully
           schema:
-            $ref: '#/definitions/dtos.StructuredResponse'
+            $ref: '#/definitions/dtos.ApiResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/dtos.StructuredResponse'
+            $ref: '#/definitions/dtos.ApiResponse'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/dtos.StructuredResponse'
+            $ref: '#/definitions/dtos.ApiResponse'
       security:
       - BearerAuth: []
       summary: Get all Todo Items
@@ -371,15 +371,15 @@ paths:
         "200":
           description: Todo item updated successfully
           schema:
-            $ref: '#/definitions/dtos.StructuredResponse'
+            $ref: '#/definitions/dtos.ApiResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/dtos.StructuredResponse'
+            $ref: '#/definitions/dtos.ApiResponse'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/dtos.StructuredResponse'
+            $ref: '#/definitions/dtos.ApiResponse'
       security:
       - BearerAuth: []
       summary: Update an existing Todo Item
